[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "coqui_cli"
authors = [{name = "coqui.ai", email = "info@coqui.ai"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.7,<3.11"
dynamic = ["version", "description"]
dependencies = [
]

[project.urls]
Home = "https://github.com/coqui-ai/cli"
Documentation = "https://coqui-cli.readthedocs.io"
Source = "https://github.com/coqui-ai/cli"

[project.scripts]
coqui-cli = "coqui_cli.__main__:main"