[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "coqui"
authors = [{name = "coqui.ai", email = "info@coqui.ai"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.7,<3.12"
dynamic = ["version", "description"]
dependencies = [
  "click==8.1.3",
  "gql[aiohttp]==3.3.0",
  "json5==0.9.8",
]

[project.optional-dependencies]
docs = [
  "Sphinx==6.1.3",
  "sphinx-immaterial==0.11.2",
]

[project.urls]
Home = "https://github.com/coqui-ai/coqui-py"
Source = "https://github.com/coqui-ai/coqui-py"

[project.scripts]
coqui = "coqui.__main__:main"
