[metadata]
name = coqui-cli
author = Coqui GmbH
author_email = info@coqui.ai
url = https://github.com/coqui-ai/coqui-cli
license = All rights reserved
version = file: VERSION
description = Model management and testing tool for Coqui STT models
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Beta
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Speech
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    
python_requires = >=3.7,<3.11

[options.entry_points]
console_scripts =
    coqui = coqui_cli.__main__:main

[options.extras_require]
test =
    pytest==6.2.4
